6-network-policy/network-policy-pod1-pod3.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-pod1-pod3
spec:
  podSelector:
    matchLabels:
      name: pod1
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: pod3
